--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "boiler-plate-code",
-  "version": "1.0.0",
-  "description": "노드 리액트 로그인, 회원가입 Boiler-plate-code",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ohjooyeong/boiler-plate-code.git"
-  },
-  "author": "joooh",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ohjooyeong/boiler-plate-code/issues"
-  },
-  "homepage": "https://github.com/ohjooyeong/boiler-plate-code#readme",
-  "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.11.9"
-  },
-  "devDependencies": {
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.0"
-  }
+    "name": "boiler-plate-code",
+    "version": "1.0.0",
+    "description": "노드 리액트 로그인, 회원가입 Boiler-plate-code",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "backend": "nodemon index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ohjooyeong/boiler-plate-code.git"
+    },
+    "author": "joooh",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/ohjooyeong/boiler-plate-code/issues"
+    },
+    "homepage": "https://github.com/ohjooyeong/boiler-plate-code#readme",
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "mongoose": "^5.11.9"
+    },
+    "devDependencies": {
+        "eslint-config-prettier": "^7.1.0",
+        "eslint-plugin-prettier": "^3.3.0",
+        "nodemon": "^2.0.6"
+    }
 }
