--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "노드 리액트 로그인, 회원가입 Boiler-plate-code",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js",
-        "backend": "nodemon index.js",
+        "start": "node server/index.js",
+        "backend": "nodemon server/index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
